trunk/Archive/6b791e61eb88b415801787288f987216-50d9cfc8a1d350e7409e81e87c2653ba/output
+ g++-4.8 -std=c++11 -O2 -pthread main.cpp
main.cpp: In function 'int main()':
main.cpp:7:5: error: 'cout' is not a member of 'std'
     std::cout << r.size() << '\n';
     ^
main.cpp:10:5: error: 'cout' is not a member of 'std'
     std::cout << r.size() << '\n'; // oops, it changed!
     ^
